Adiciona players de audio

--- a/index.html
+++ b/index.html
@@ -22,80 +22,9 @@
       <div class="bck-heart-small"></div>
       <h1>Sonoplastia do Vai dar namoro!</h1>
 
-      <ul class="sounds">
-        <li>
-          <button type="button">
-            <span>C</span>
-            <label>Ele gostaaa</label>
-          </button>
-        </li>
-        <li>
-          <button type="button">
-            <span>C</span>
-            <label>UIIIIIII</label>
-          </button>
-        </li>
-        <li>
-          <button type="button">
-            <span>C</span>
-            <label>Que isso, meu filho, calmaa</label>
-          </button>
-        </li>
-        <li>
-          <button type="button">
-            <span>C</span>
-            <label>Ele gostaaa</label>
-          </button>
-        </li>
-        <li>
-          <button type="button">
-            <span>C</span>
-            <label>UIIIIIII</label>
-          </button>
-        </li>
-        <li>
-          <button type="button">
-            <span>C</span>
-            <label>Que isso, meu filho, calmaa</label>
-          </button>
-        </li>
-        <li>
-          <button type="button">
-            <span>C</span>
-            <label>Ele gostaaa</label>
-          </button>
-        </li>
-        <li>
-          <button type="button">
-            <span>C</span>
-            <label>UIIIIIII</label>
-          </button>
-        </li>
-        <li>
-          <button type="button">
-            <span>C</span>
-            <label>Que isso, meu filho, calmaa</label>
-          </button>
-        </li>
-        <li>
-          <button type="button">
-            <span>C</span>
-            <label>Ele gostaaa</label>
-          </button>
-        </li>
-        <li>
-          <button type="button">
-            <span>C</span>
-            <label>UIIIIIII</label>
-          </button>
-        </li>
-        <li>
-          <button type="button">
-            <span>C</span>
-            <label>Que isso, meu filho, calmaa</label>
-          </button>
-        </li>
-      </ul>
+      <ul class="sounds"></ul>
     </div>
+
+    <script src="scripts/script.js"></script>
   </body>
 </html>
